--- a/templates/job_apply.html
+++ b/templates/job_apply.html
@@ -78,13 +78,13 @@
             </div>
         </div>
     </div> <!-- End of .alert_wrapper -->
-    <div class="alert-wrapper" id="alert-error">
+    {% comment %} <div class="alert-wrapper" id="alert-error">
         <div id="error">
             <button class="closeAlert"><i class="fa fa-times" aria-hidden="true"></i></button>
             <div class="wrapper">
                 <p>Sorry! Something went wrong with your submission.</p>
             </div>
         </div>
-    </div> <!-- End of .alert_wrapper -->
+    </div> <!-- End of .alert_wrapper --> {% endcomment %}
 </div> <!-- /.contact-form-holder -->
 {% endblock %}
